feat: Add deployment infrastructure (CI/CD, Docker, Sentry, health check)
- Add GitHub Actions CI/CD workflows
- Add Dockerfile and docker-compose.prod.yml
- Add Sentry error monitoring configuration
- Add health check API endpoint
- Add PM2 ecosystem configuration
- Update deployment documentation

--- a/.env.example
+++ b/.env.example
@@ -75,8 +75,14 @@ MEILISEARCH_API_KEY=""
 # ===========================================
 # OPTIONAL: MONITORING (Sentry)
 # ===========================================
+# Get from: https://sentry.io/settings/projects/
 SENTRY_DSN=""
 NEXT_PUBLIC_SENTRY_DSN=""
+# Required for source map uploads (optional)
+SENTRY_ORG=""
+SENTRY_PROJECT=""
+# Auth token for source map uploads (optional)
+SENTRY_AUTH_TOKEN=""
 
 # ===========================================
 # DEVELOPMENT
